src/objects/Domain_Monthly_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Active_Mobile_Users__c</fullName>
        <label>Active Mobile Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forms__c</fullName>
        <label>Forms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forms_for_Period__c</fullName>
        <label>Forms for Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scale_of_Programs__c</fullName>
        <label>Scale of Programs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Software_Plan_Edition__c</fullName>
        <label>Software Plan Edition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Pro</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Empty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wam__c</fullName>
        <label>Wam</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Domain Monthly Snapshot</label>
    <nameField>
        <label>Domain Monthly Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Domain Monthly Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>